# generate-changelog

./: .bandit-baseline.json  .buildinfo  .changelog-config.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  action.yml  api.html  changelog.html  cli.html  configuration.html  contributing.html  entrypoint.sh  genindex.html  how-it-works.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  readme.html  release-hinting.html  releasing.html  search.html  searchindex.js  setup.cfg  setup.py
.github/: dependabot.yml
.github/changelog_templates/: commit.md.jinja
.github/workflows/: build-docker.yaml  build-python.yaml  bump-version-preview.yaml  bump-version.yaml  bumpversion-pr.yaml  bumpversion.yaml  codeql-analysis.yml  publish-docs-preview.yaml  publish-docs.yaml  publish-package.yaml  release-container.yaml  release-github.yaml  release-pypi.yaml  release.yaml  test.yaml
_autosummary/: generate_changelog._attr_docs.html  generate_changelog.actions.html  generate_changelog.cli.html  generate_changelog.commits.html  generate_changelog.configuration.html  generate_changelog.context.html  generate_changelog.data_merge.html  generate_changelog.git_ops.html  generate_changelog.pipeline.html  generate_changelog.release_hint.html  generate_changelog.templating.html  generate_changelog.utilities.html
_autosummary/_attr_docs/: generate_changelog._attr_docs.attribute_docstrings.html
_autosummary/actions/: generate_changelog.actions.Registry.html  generate_changelog.actions.file_processing.html  generate_changelog.actions.matching.html  generate_changelog.actions.metadata.html  generate_changelog.actions.register_builtin.html  generate_changelog.actions.shell.html  generate_changelog.actions.text_processing.html
_autosummary/cli/: generate_changelog.cli.OutputOption.html  generate_changelog.cli.echo.html  generate_changelog.cli.generate_config_callback.html  generate_changelog.cli.get_user_config.html  generate_changelog.cli.main.html  generate_changelog.cli.version_callback.html
_autosummary/commits/: generate_changelog.commits.create_version_context.html  generate_changelog.commits.first_matching.html  generate_changelog.commits.generate_commit_context.html  generate_changelog.commits.get_context_from_tags.html  generate_changelog.commits.sort_group_commits.html
_autosummary/configuration/: generate_changelog.configuration.Configuration.html  generate_changelog.configuration.get_config.html  generate_changelog.configuration.get_default_config.html  generate_changelog.configuration.set_config.html  generate_changelog.configuration.write_default_config.html
_autosummary/context/: generate_changelog.context.ChangelogContext.html  generate_changelog.context.CommitContext.html  generate_changelog.context.GroupingContext.html  generate_changelog.context.VersionContext.html
_autosummary/data_merge/: generate_changelog.data_merge.comprehensive_merge.html  generate_changelog.data_merge.deep_merge.html  generate_changelog.data_merge.merge_iterables.html
_autosummary/git_ops/: generate_changelog.git_ops.GitTag.html  generate_changelog.git_ops.TagInfo.html  generate_changelog.git_ops.get_commits_by_tags.html  generate_changelog.git_ops.get_repo.html  generate_changelog.git_ops.get_tags.html  generate_changelog.git_ops.parse_commits.html
_autosummary/pipeline/: generate_changelog.pipeline.Action.html  generate_changelog.pipeline.Pipeline.html  generate_changelog.pipeline.import_function.html  generate_changelog.pipeline.noop_func.html  generate_changelog.pipeline.pipeline_factory.html
_autosummary/release_hint/: generate_changelog.release_hint.InvalidRuleError.html  generate_changelog.release_hint.ReleaseRule.html  generate_changelog.release_hint.RuleProcessor.html  generate_changelog.release_hint.suggest_release_type.html
_autosummary/templating/: generate_changelog.templating.RenderedChangelog.html  generate_changelog.templating.get_default_env.html  generate_changelog.templating.get_pipeline_env.html  generate_changelog.templating.render_changelog.html
_autosummary/utilities/: generate_changelog.utilities.diff_index.html  generate_changelog.utilities.eval_if_callable.html  generate_changelog.utilities.is_action.html  generate_changelog.utilities.is_pipeline.html  (+2 more)
_modules/: index.html
_sources/: api.rst.txt  configuration.md.txt  how-it-works.md.txt
actions/: file_processing.html  index.html  metadata.html  shell.html  text_processing.html
clgen/: __init__.py  cli.py  configuration-spec.md  configuration.py  data_merge.py  git_ops.py  pipeline.py  templating.py  utilities.py
docs/: explanation.md  index.md  installation.md  quickstart.md
docsrc/: Makefile  api.rst  cli.rst  conf.py  configuration-spec.md  configuration.md  generating-release.md  how-it-works.md  index.md  make.bat  release-hinting.md
explanation/: index.html
generate_changelog/: __init__.py  _attr_docs.py  cli.py  commits.py  configuration.py  context.py  data_merge.py  git_ops.py  indented_logger.py  lazy.py  notes.py  pipeline.py  release_hint.py  templating.py  utilities.py
installation/: index.html
quickstart/: index.html
recipes/: conventional-commits.html  index.html
requirements/: dev.txt  docs.txt  prod.txt  test.txt
search/: search_index.json
templating/: changelog-context.html  commit-context.html  index.html  templates.html  version-context.html
test/: conftest.py  test_cli.py  test_commits.py  test_configuration.py  test_conv_commits.py  test_data_merge.py  test_git_ops.py  test_lazy.py  test_log_linearity.py  test_notes.py  test_pipeline.py  test_release_hint.py  test_templating.py  test_utilities.py
tests/: conftest.py  test_cli.py  test_commits.py  test_configuration.py  test_conv_commits.py  test_git_ops.py  test_indented_logger.py  test_log_linearity.py  test_notes.py  test_pipeline.py  test_release_hint.py  test_templating.py  test_text_processing.py
tools/: drawioexport.py  update_frontmatter.py
tutorials/: index.html
(+342 files in other folders)
