[bumpversion]
current_version = 0.6.0
commit = True
commit_args = --no-verify
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\+\w+-(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}+{$BRANCH_NAME}-{dev}
	{major}.{minor}.{patch}
message = Version updated from {current_version} to {new_version}

[metadata]
name = generate_changelog
version = attr: generate_changelog.__version__
description = Generate a changelog file from a local git checkout
license = MIT
license_files = LICENSE
url = https://github.com/coordt/generate_changelog
author = Corey Oordt
author_email = coreyoordt@gmail.com
classifiers = 
	Environment :: Console
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Software Development
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Version Control :: Git
long_description = file:README.md
long_description_content_type = "text/markdown"
keywords = changelog, change, git, commit
project_urls = 
	Documentation = https://coordt.github.io/generate-changelog/
	Source = https://github.com/coordt/generate-changelog

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8

[options.packages.find]
exclude = 
	example*
	tests*
	docs
	build
include = generate_changelog*

[options.entry_points]
console_scripts = 
	generate-changelog = generate_changelog.cli:app

[flake8]
ignore = D203,W503
exclude = 
	.git,
	.tox,
	docs,
	build,
	dist
	test
max-line-length = 119

[darglint]
ignore = DAR402

[bumpversion:file:generate_changelog/__init__.py]

[bumpversion:file:CHANGELOG.md]
search = Unreleased
